--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<h1>Hello world!</h1>
-<button mat-raised-button>Basic</button>
-<button mat-raised-button color="primary">Primary</button>
-<button mat-raised-button color="accent">Accent</button>
-<button mat-raised-button color="warn">Warn</button>
-<button mat-raised-button disabled>Disabled</button>
+<router-outlet></router-outlet>
