--- a/src/app/layout/content-layout/content-layout.component.html
+++ b/src/app/layout/content-layout/content-layout.component.html
@@ -1,8 +1,6 @@
-<p>content-layout works!</p>
-<!-- Navigation -->
+<app-navbar></app-navbar>
 
 <div class="container">
-  <h1>Koks</h1>
   <router-outlet></router-outlet>
 </div>
 
