--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -4,7 +4,7 @@
 
 .flag-container {
   display: flex;
-  height: 130%;
+  align-self: stretch;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   margin-right: 5rem;
 
