--- a/src/app/layout/content-layout/content-layout.component.html
+++ b/src/app/layout/content-layout/content-layout.component.html
@@ -1,8 +1,20 @@
-<app-navbar></app-navbar>
+  <div class="navbar">
+    <app-navbar (toggleSidebar)="snav.toggle()"></app-navbar>
+  </div>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+  <mat-sidenav-container class="sidenav-container">
+    <mat-sidenav [opened]="mobileQuery.matches ? false : true"
+      #snav
+      [mode]="mobileQuery.matches ? 'over' : 'side'"
+      [fixedInViewport]="mobileQuery.matches"
+      fixedTopGap="56">
+      <mat-nav-list>
+        <a mat-list-item routerLink=".">Kokosak</a>
+      </mat-nav-list>
+    </mat-sidenav>
 
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 <!-- footer -->
-
