--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,16 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// fullscreen layout
+app-content-layout {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+mat-sidenav-container.mat-drawer-container {
+  overflow: auto;
+  flex-grow: 1;
+}
+// fullscreen layout
