Toggle sidenav component

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <button (click)="toggleSidebarHandler()" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button (click)="toggleSidenav()" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
   <span>Politi.cz</span>
