Sidenav mocl data of political parties

--- a/src/app/layout/content-layout/content-layout.component.html
+++ b/src/app/layout/content-layout/content-layout.component.html
@@ -1,8 +1,4 @@
-  <div class="navbar">
-    <app-navbar></app-navbar>
-  </div>
+<app-navbar></app-navbar>
 
-  <app-sidenav>
-    <router-outlet></router-outlet>
-  </app-sidenav>
+<app-sidenav></app-sidenav>
 <!-- footer -->
