--- a/src/app/layout/content-layout/content-layout.component.html
+++ b/src/app/layout/content-layout/content-layout.component.html
@@ -1,8 +1,4 @@
 <app-navbar></app-navbar>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
-
+<app-sidenav></app-sidenav>
 <!-- footer -->
-
