--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -1,5 +1,13 @@
-.party-icon {
+.logo-container {
   margin-right: .5rem;
+  width: 4rem;
+  height: 3rem;
+}
+
+.party-icon {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .search {
