--- a/src/app/layout/content-layout/content-layout.component.html
+++ b/src/app/layout/content-layout/content-layout.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="spinner$ | async" class="overlay">
+  <mat-spinner></mat-spinner>
+</div>
+
 <app-navbar></app-navbar>
 
 <app-sidenav></app-sidenav>
