--- a/src/app/layout/content-layout/content-layout.component.scss
+++ b/src/app/layout/content-layout/content-layout.component.scss
@@ -1,1 +1,11 @@
-
+.overlay {
+  position: absolute;
+  z-index: 1000;
+  top: 0px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(138, 136, 136, 0.356);
+}
