--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -11,7 +11,7 @@
       </mat-form-field>
     </div>
     <mat-nav-list>
-      <mat-list-item *ngFor="let party of (sidenavParties$ | async)! | filterParties: searchValue ">
+      <mat-list-item (click)="navigateToPoliticalPartyPage(party.id)" *ngFor="let party of (sidenavParties$ | async)! | filterParties: searchValue ">
         <div class="logo-container">
           <img [src]="party.image | pathToPartyLogo" class="party-icon">
         </div>
