--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -6,12 +6,12 @@
     <div class="search">
       <mat-form-field appearance="standard" class="search__input">
         <mat-label>{{'sidenav-search' | translate}}</mat-label>
-        <input type="text" [(ngModel)]="searchValue" matInput>
+        <input type="text" #input matInput>
         <mat-icon color="primary" matSuffix>search</mat-icon>
       </mat-form-field>
     </div>
     <mat-nav-list>
-      <mat-list-item (click)="navigateToPoliticalPartyPage(party.id)" *ngFor="let party of (sidenavParties$ | async)! | filterParties: searchValue ">
+      <mat-list-item (click)="navigateToPoliticalPartyPage(party.id)" *ngFor="let party of (sidenavParties$ | async)! | filterParties: input.value ">
         <div class="logo-container">
           <img [src]="party.image | pathToPartyLogo" class="party-icon">
         </div>
