--- a/src/app/modules/party/page/party.component.scss
+++ b/src/app/modules/party/page/party.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/variables.scss';
+
 .party {
   height: 100%;
   padding: 2rem 4rem;
@@ -12,10 +14,24 @@
     font-size: bold;
   }
 
+  &__subheading {
+    font-size: 2rem;
+  }
+
   &__politicians {
     display: grid;
+    padding-bottom: 2rem;
     justify-items: center;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    gap: 3rem;
+    grid-template-columns: repeat(auto-fit, minmax($card-width, 1fr));
+    gap: 3.3rem;
+  }
+
+  &__search {
+    justify-self: flex-start;
+    grid-column: 1 / -1;
+
+    & > * {
+      width: 100%;
+    }
   }
 }
