--- a/src/app/modules/party/page/politician/politician.component.scss
+++ b/src/app/modules/party/page/politician/politician.component.scss
@@ -1,5 +1,7 @@
+@import '../../../../../styles/variables.scss';
+
 .politician-card {
-  max-width: 20rem;
+  max-width: $card-width;
 
   &__media {
     margin-top: 2rem;
