--- a/src/app/modules/party/page/politician/politician.component.html
+++ b/src/app/modules/party/page/politician/politician.component.html
@@ -2,7 +2,7 @@
   <mat-card class="politician-card mat-elevation-z4">
     <mat-card-header>
       <mat-card-title>{{politician.fullName}}</mat-card-title>
-      <mat-card-subtitle>{{politician.birthDate}}</mat-card-subtitle>
+      <mat-card-subtitle>{{politician.birthDate | dateFormatter}}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="assets/man-user-svgrepo-com.svg">
     <mat-divider></mat-divider>
