--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,13 +1,31 @@
-.spacer {
-  flex: 1 1 auto;
+@import '../../../styles/variables.scss';
+
+.navbar {
+  display: flex;
+
+  &__left {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  &__mid {
+    display: flex;
+    align-self: stretch;
+    flex: 1 1 auto;
+    justify-content: flex-end;
+
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+    }
+  }
 }
 
 .flag-container {
   display: flex;
   align-self: stretch;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  margin-right: 5rem;
-
+  margin: 0 .5rem;
   .flag {
       width: 2rem;
       height: 100%;
