--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,6 @@
 $sidenav-width: 21rem;
 $card-width: 20rem;
 
+$bp-small: 50rem; // 800px
 $bp-medium: 62.5rem; // 1000px
+$bp-large: 75rem; // 1200px
