--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,9 @@
-$sidenav-width: 23em;
+$sidenav-width: 16em;
 $card-width: 20rem;
 
+$bp-mobile: 37.5em;
 $bp-small: 50em; // 800px
 $bp-medium: 62.5em; // 1000px
 $bp-large: 75em; // 1200px
+
+$main-color: #2979FF;
