--- a/src/app/modules/party/page/party.component.scss
+++ b/src/app/modules/party/page/party.component.scss
@@ -35,14 +35,26 @@
     @media only screen and (max-width: $bp-small) {
       gap: 2rem;
     }
+
+    @media only screen and (max-width: $bp-mobile) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__search {
-    justify-self: flex-start;
-    grid-column: 1 / -1;
+    justify-self: stretch;
+    grid-column: 1 / span 1;
 
-    & > * {
-      width: 100%;
+    mat-form-field {
+      width: 100% !important;
+    }
+  }
+
+  .empty {
+    grid-column: 2 / -1;
+
+    @media only screen and (max-width: $bp-mobile) {
+      grid-column: auto;
     }
   }
 }
@@ -50,7 +62,7 @@
 .no-result {
   font-size: 3rem;
   grid-column: 1 / -1;
-  
+
   @media only screen and (max-width: $bp-small) {
     line-height: 4rem;
   }
