--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,11 @@ app-sidenav {
   }
 
   mat-sidenav .mat-list-base {
-    min-width: $sidenav-width !important;
+    width: $sidenav-width !important;
+  }
+
+  .mat-drawer {
+    overflow-y: visible;
   }
 }
 // fullscreen layout
@@ -49,3 +53,5 @@ app-sidenav {
 .mat-snack-bar-container {
   max-width: 90vw !important;
 }
+
+.mat-button-focus-overlay { background-color: transparent !important; }// fix for button that is opening sidenav being focued after closing sidenav
