--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -30,12 +30,12 @@
   justify-content: center;
   right: 0px;
   top: 50%;
-  width: 4rem;
+  width: 3rem;
   height: 4rem;
-  border-radius: 50%;
+  border-radius: 50% 0 0 50%;
   background-color: $main-color;
   z-index: 1000;
-  translate: 50% 0;
+
   cursor: pointer;
 
   mat-icon {
@@ -44,5 +44,5 @@
 }
 
 .hidden {
-  display: none !important;
+  display: none;
 }
