Logo navigation link to home

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <button (click)="toggleSidenav()" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Politi.cz</span>
+    <a class="navbar__politi" routerLink="'/home'">Politi.cz</a>
   </div>
   <!-- <span class="spacer"></span> -->
   <div class="navbar__mid">
