--- a/src/app/layout/sidenav/sidenav.component.scss
+++ b/src/app/layout/sidenav/sidenav.component.scss
@@ -6,6 +6,16 @@
   height: 3rem;
 }
 
+.navitem {
+  font-size: 1.5rem;
+  justify-content: center;
+}
+
+mat-icon {
+  vertical-align: bottom;
+  margin-right: 1rem;
+}
+
 .party-icon {
   width: 100%;
   height: 100%;
