Add transition to logo text

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -6,6 +6,11 @@
   &__politi {
     text-decoration: none;
     color: #fff;
+    transition: all .25s;
+
+    &:hover {
+      color: rgb(225, 220, 220);
+    }
   }
 
   &__left {
