News component, css

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -44,7 +44,7 @@
       }
 
       &--blue {
-        background-color: #11457e;
+        background-color: hsl(211, 76%, 28%);
       }
 
       &--red {
