--- a/src/app/modules/home/page/home/news/news.component.html
+++ b/src/app/modules/home/page/home/news/news.component.html
@@ -1,8 +1,7 @@
 <div class="news">
-    <div class="news__overlay"></div>
     <img src="assets/polit.jpg">
     <div class="news__text">
       <h3>{{news.heading}}</h3>
-      <span class="news__text__content">{{news.content}}</span>
+      <div class="news__text__content">{{news.content}}</div>
     </div>
 </div>
