--- a/src/app/modules/home/page/home/news/news.component.scss
+++ b/src/app/modules/home/page/home/news/news.component.scss
@@ -7,10 +7,7 @@
     transition: all .3s;
 
     &:hover {
-
         box-shadow: 0px 0px 34px -7px rgba(10,10,10,1);
-
-
     }
 
     img {
@@ -26,13 +23,19 @@
         bottom: 0;
         padding: 1.5rem 1rem;
         color: #fff;
-        z-index: 101;
         background-color: rgba(29, 28, 28, 0.833);
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 2.5rem;
+        gap: 1.5rem 0;
+        align-items: center;
 
         h3 {
             font-size: 1.5rem;
             font-weight: bold;
             letter-spacing: .1rem;
+            margin: 0;
+            padding: 0;
         }
 
         &__content {
@@ -43,14 +46,5 @@
             font-size: 1.2rem;
             text-align: justify;
         }
-    }
-
-    &__overlay {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        // background-image: linear-gradient(rgb(41 121 255 / 60%), rgb(41 121 255 / 75%));
-        z-index: 100;
-        transition: all .3s;
     }
 }
