--- a/src/app/modules/home/page/home/news/news.component.scss
+++ b/src/app/modules/home/page/home/news/news.component.scss
@@ -4,10 +4,15 @@
     height: 100%;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
-    transition: all .3s;
+    transition: box-shadow .1s;
 
-    &:hover {
-        box-shadow: 0px 0px 34px -7px rgba(10,10,10,1);
+
+
+    @media (hover: hover) {
+        &:hover {
+            box-shadow: 0px 0px 34px -7px rgba(10,10,10,1);
+            outline: 3px solid rgb(41, 121, 255);
+        }
     }
 
     img {
