--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,8 @@
   box-sizing: border-box;
 }
 
-html, body { height: 100%;
-
+html, body {
+  height: 100%;
   font-size: 85%;
 
   @media only screen and (max-width: $bp-large) {
