Home page witn news (#15)
* Logo navigation link to home

* Home item in sidenav

* Add transition to logo text

* Prepare container, schemas and service for news

* News component, css

* responsivnes

* Set variables for breakpoints, set hover for hoverable devices

* delete test

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -3,6 +3,16 @@
 .navbar {
   display: flex;
 
+  &__politi {
+    text-decoration: none;
+    color: #fff;
+    transition: all .25s;
+
+    &:hover {
+      color: rgb(225, 220, 220);
+    }
+  }
+
   &__left {
     display: flex;
     align-items: center;
@@ -34,7 +44,7 @@
       }
 
       &--blue {
-        background-color: #11457e;
+        background-color: hsl(211, 76%, 28%);
       }
 
       &--red {
