--- a/src/app/modules/home/page/home/home.component.html
+++ b/src/app/modules/home/page/home/home.component.html
@@ -1,1 +1,7 @@
-<p>{{'home' | translate }}</p>
+<section class="container">
+    <div class="news_container">
+      <ng-container *ngFor="let news of newsList">
+          <app-news [news]="news"></app-news>
+      </ng-container>
+    </div>
+</section>
