--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,10 @@
 $sidenav-width: 16em;
 $card-width: 20rem;
 
-$bp-mobile: 37.5em;
-$bp-small: 50em; // 800px
+$bp-mobile: 37.5em; // 600px
+$bp-small: 53.125em; // 850px
 $bp-medium: 62.5em; // 1000px
 $bp-large: 75em; // 1200px
+$bp-xlarge: 103.125em; //1650px
 
 $main-color: #2979FF;
