news detail changes

--- a/src/app/modules/home/page/home/news-detail/news-detail.component.html
+++ b/src/app/modules/home/page/home/news-detail/news-detail.component.html
@@ -8,8 +8,7 @@
             <p class="news__header__box__date">{{news.publishDate! | dateFormatter}}</p>
           </div>
         </div>
-        <div class="news__content">
-          {{news.content}}
+        <div [innerHTML]="news.content" class="news__content">
         </div>
       </div>
     </ng-container>
