--- a/src/app/modules/home/page/home/news-detail/news-detail.component.scss
+++ b/src/app/modules/home/page/home/news-detail/news-detail.component.scss
@@ -3,45 +3,43 @@
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 3rem;
 
   &__header {
-    height: 15rem;
-    background-color: #000;
     color: #fff;
     display: flex;
     align-items: center;
     width: 100%;
 
     &__box {
-      height: 10rem;
       flex-grow: 1;
-      margin: 3rem 4rem;
-      border: 10px solid rgb(41, 121, 255);
+      border-bottom: 10px solid rgb(41, 121, 255);
       display: flex;
       flex-direction: column;
       justify-content: center;
       position: relative;
+      margin-bottom: 1.5rem;
 
       &__heading {
         align-self: center;
         justify-self: center;
         font-size: 3.5rem;
         letter-spacing: .1rem;
-        margin: 0;
+        line-height: 4rem ;
+        margin: 1rem 0;
+        color: #000;
       }
 
       &__date {
-        position: absolute;
-        right: 0;
-        bottom: 0;
+        text-align: right;
         margin: .5rem;
         font-size: 1.5rem;
+        color: #000;
       }
     }
   }
 
   &__content {
-    font-size: 1.2rem;
-    padding: 1rem 2rem;
+    font-size: 1.35rem;
   }
 }
