--- a/src/app/shared/component/admin-quick-menu-actions/admin-quick-menu-actions.component.html
+++ b/src/app/shared/component/admin-quick-menu-actions/admin-quick-menu-actions.component.html
@@ -1,17 +1,13 @@
-<button mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-  <mat-icon>more_vert</mat-icon>
-</button>
+<div class="wrapper" *ngIf="actions">
+    <button class="buttonek" mat-icon-button (click)="$event.stopPropagation()" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+</div>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item>
-    <mat-icon>dialpad</mat-icon>
-    <span>Redial</span>
-  </button>
-  <button mat-menu-item disabled>
-    <mat-icon>voicemail</mat-icon>
-    <span>Check voice mail</span>
-  </button>
-  <button mat-menu-item>
-    <mat-icon>notifications_off</mat-icon>
-    <span>Disable alerts</span>
-  </button>
+  <ng-container *ngFor="let action of actions">
+    <button mat-menu-item (click)="onClick(action)">
+      <mat-icon>{{action.icon}}</mat-icon>
+      <span>{{action.label}}</span>
+    </button>
+  </ng-container>
 </mat-menu>
