Set primary color for icons

--- a/src/app/shared/component/admin-quick-menu-actions/admin-quick-menu-actions.component.html
+++ b/src/app/shared/component/admin-quick-menu-actions/admin-quick-menu-actions.component.html
@@ -6,7 +6,7 @@
 <mat-menu #menu="matMenu">
   <ng-container *ngFor="let action of actions">
     <button mat-menu-item (click)="onClick(action)">
-      <mat-icon>{{action.icon}}</mat-icon>
+      <mat-icon color="primary">{{action.icon}}</mat-icon>
       <span>{{action.label}}</span>
     </button>
   </ng-container>
