--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -10,7 +10,7 @@
       </mat-list-item>
     </mat-nav-list>
     <div class="search">
-      <mat-form-field appearance="standard" class="search__input">
+      <mat-form-field class="search__input">
         <mat-label>{{'sidenav-search' | translate}}</mat-label>
         <input type="text" #input matInput>
         <mat-icon color="primary" matSuffix>search</mat-icon>
