Admin quick menu - delete action (#18)
* Created component with mock data

* Quick menu schemes, generate actions

* Set primary color for icons

* News ngxs state, actions

* state management for politicians, remove actions

* Refactor state and action location

* fixed tests, refactoring

--- a/src/app/modules/home/page/home/news/news.component.html
+++ b/src/app/modules/home/page/home/news/news.component.html
@@ -1,4 +1,5 @@
-<div class="news">
+<div class="news" (click)="navigateToDetail(news.id)">
+    <app-admin-quick-menu-actions (actionClickEvt)="handleActionEvent($event)"></app-admin-quick-menu-actions>
     <img src="assets/polit.jpg">
     <div class="news__text">
       <h3>{{news.heading}}</h3>
