--- a/src/theme.scss
+++ b/src/theme.scss
@@ -7,9 +7,9 @@
 //  If you specify typography styles for the components you use elsewhere, you should delete this line.
 //  If you don't need the default component typographies but still want the hierarchy styles,
 //  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
-@include mat.all-legacy-component-typographies();
-@include mat.legacy-core();
+//    `@include mat.legacy-typography-hierarchy(mat.define-typography-config());`
+@include mat.all-component-typographies();
+@include mat.core();
 
 $my-primary: mat.define-palette(mat.$blue-palette, A400);
 $my-accent: mat.define-palette(mat.$orange-palette, 600);
@@ -23,4 +23,4 @@ $my-theme: mat.define-light-theme((
  )
 ));
 
-@include mat.all-legacy-component-themes($my-theme);
+@include mat.all-component-themes($my-theme);
