--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -18,10 +18,12 @@
     </div>
     <mat-nav-list>
       <mat-list-item (click)="navigateToPoliticalPartyPage(party.id)" *ngFor="let party of (sidenavParties$ | async)! | filterParties: input.value ">
-        <div class="logo-container">
-          <img [src]="party.image | pathToPartyLogo" class="party-icon">
+        <div class="party">
+          <div class="party__logo-container">
+            <img [src]="party.image | pathToPartyLogo" class="party-icon">
+          </div>
+          <span>{{party.name}}</span>
         </div>
-        <span>{{party.name}}</span>
       </mat-list-item>
       <mat-list-item *ngIf="(partiesCount | async) === 0">
         <span class="no-result">{{'no-result' | translate}}</span>
