--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ html, body {
     font-size: 70%;
   }
 }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; }
 
 // fullscreen layout
 app-content-layout {
