Full migration to angular and material V15 (#19)
* Fix GH actions, migrate legacy components, fix peer dependencies

* Fix sidenav item for political party

* Fix media at politician card

* Fix font sizes

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,15 +1,11 @@
 @use '@angular/material' as mat;
 
-// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
-//  The following line adds:
-//    1. Default typography styles for all components
-//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
-//  If you specify typography styles for the components you use elsewhere, you should delete this line.
-//  If you don't need the default component typographies but still want the hierarchy styles,
-//  you can delete this line and instead use:
-//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
-@include mat.all-legacy-component-typographies();
-@include mat.legacy-core();
+@include mat.all-component-typographies();
+@include mat.core();
+
+$my-typography: mat.define-typography-config(
+  $font-family: "'Roboto', sans-serif",
+);
 
 $my-primary: mat.define-palette(mat.$blue-palette, A400);
 $my-accent: mat.define-palette(mat.$orange-palette, 600);
@@ -20,7 +16,8 @@ $my-theme: mat.define-light-theme((
    primary: $my-primary,
    accent: $my-accent,
    warn: $my-warn
- )
+ ),
+ typography: $my-typography
 ));
 
-@include mat.all-legacy-component-themes($my-theme);
+@include mat.all-component-themes($my-theme);
