--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@ html, body {
     font-size: 70%;
   }
 }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; }
 
 // fullscreen layout
 app-content-layout {
@@ -32,7 +32,7 @@ app-sidenav {
     height: 100%;
   }
 
-  mat-sidenav .mat-list-base {
+  mat-sidenav .mat-mdc-list-base {
     width: $sidenav-width !important;
   }
 
@@ -76,12 +76,13 @@ app-sidenav {
   color: #fff;
 }
 
-.mat-simple-snackbar-action {
+.mat-mdc-snack-bar-action {
   color: #fff;
 }
 
-.mat-snack-bar-container {
+.mat-mdc-snack-bar-container {
   max-width: 90vw !important;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
 .mat-button-focus-overlay { background-color: transparent !important; }// fix for button that is opening sidenav being focued after closing sidenav
