Add-new button, refactor files location

--- a/src/app/modules/home/page/home.component.html
+++ b/src/app/modules/home/page/home.component.html
@@ -1,5 +1,9 @@
 <section class="container">
     <div class="news_container">
+      <button mat-raised-button color="primary" class="add">
+        <mat-icon>add</mat-icon>
+        {{'add-post' | translate}}
+      </button>
       <ng-container *ngFor="let news of newsList$ | async">
           <app-news [news]="news"></app-news>
       </ng-container>
