--- a/src/app/modules/home/page/home.component.scss
+++ b/src/app/modules/home/page/home.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/variables.scss';
+@import '../../../../styles/variables.scss';
 
 .news_container {
     grid-column: center-start / center-end;
@@ -19,4 +19,14 @@
     & app-news:nth-of-type(1) {
         grid-column: center-start / center-end;
     }
+}
+
+.add {
+  grid-column: center-start / center-end;
+  justify-self: flex-end;
+  font-size: 1.2rem;
+
+  mat-icon {
+    scale: 1.5;
+  }
 }
