--- a/src/app/modules/home/page/home.component.html
+++ b/src/app/modules/home/page/home.component.html
@@ -1,6 +1,6 @@
 <section class="container">
     <div class="news_container">
-      <button mat-raised-button color="primary" class="add">
+      <button [routerLink]="'/news/add'" mat-raised-button color="primary" class="add">
         <mat-icon>add</mat-icon>
         {{'add-post' | translate}}
       </button>
