--- a/src/app/modules/party/page/party.component.html
+++ b/src/app/modules/party/page/party.component.html
@@ -1,22 +1,28 @@
-<div class="party">
+<section class="container">
   <ng-container *ngIf="(politicalParty$ | async) as party" >
-    <h1 class="party__heading">{{party.name}}</h1>
-    <div class="party__politicians">
-      <div class="party__search">
-        <mat-form-field appearance="outline">
-          <mat-label>{{'politician-search' | translate}}</mat-label>
-          <input type="text" #input matInput>
-          <mat-icon color="primary" matSuffix>search</mat-icon>
-        </mat-form-field>
-      </div>
-      <div class="empty">
-
-      </div>
-      <app-politician *ngFor="let politician of party.politicians | filterPoliticians: input.value" [politician]="politician"></app-politician>
-      <ng-container *ngIf="(politiciansCount | async) === 0">
-        <span class="no-result">{{'no-result' | translate}}</span>
-      </ng-container>
+      <div class="party">
+        <h1 class="party__heading">{{party.name}}</h1>
+        <div class="party__actions">
+          <div class="party__actions__search">
+            <mat-form-field appearance="outline">
+              <mat-label>{{'politician-search' | translate}}</mat-label>
+              <input type="text" #input matInput>
+              <mat-icon color="primary" matSuffix>search</mat-icon>
+            </mat-form-field>
+          </div>
+          <button [routerLink]="['/political-party', party.id, 'add']" mat-raised-button color="primary" class="button-add">
+            <mat-icon>add</mat-icon>
+            {{'add-politician' | translate}}
+          </button>
+        </div>
     </div>
-  </ng-container>
-</div>
+
+      <div class="politicians">
+        <app-politician *ngFor="let politician of party.politicians | filterPoliticians: input.value" [politician]="politician"></app-politician>
+        <ng-container *ngIf="(politiciansCount | async) === 0">
+          <span class="no-result">{{'no-result' | translate}}</span>
+        </ng-container>
+      </div>
+    </ng-container>
+</section>
 
