--- a/src/app/modules/party/page/party.component.scss
+++ b/src/app/modules/party/page/party.component.scss
@@ -2,11 +2,8 @@
 
 .party {
   height: 100%;
-  padding: 2rem 4rem;
+  grid-column: center-start / center-end;
 
-  @media only screen and (max-width: $bp-small) {
-    padding: 2rem;
-  }
 
   &__heading {
     font-size: 3rem;
@@ -26,27 +23,21 @@
     font-size: 2rem;
   }
 
-  &__politicians {
-    display: grid;
-    padding-bottom: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax($card-width, 1fr));
-    gap: 3.3rem;
-
-    @media only screen and (max-width: $bp-small) {
-      gap: 2rem;
-    }
+  &__actions {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 3rem;
+    gap: 1.5rem;
 
     @media only screen and (max-width: $bp-mobile) {
-      grid-template-columns: 1fr;
+      flex-direction: column;
+      align-items: stretch;
     }
-  }
 
-  &__search {
-    justify-self: stretch;
-    grid-column: 1 / span 1;
-
-    mat-form-field {
-      width: 100% !important;
+    &__search {
+      mat-form-field {
+        width: 100% !important;
+      }
     }
   }
 
@@ -56,6 +47,23 @@
     @media only screen and (max-width: $bp-mobile) {
       grid-column: auto;
     }
+  }
+}
+
+.politicians {
+  grid-column: center-start / center-end;
+
+  display: grid;
+  padding-bottom: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax($card-width, 1fr));
+  gap: 3.3rem;
+
+  @media only screen and (max-width: $bp-small) {
+    gap: 2rem;
+  }
+
+  @media only screen and (max-width: $bp-mobile) {
+    grid-template-columns: 1fr;
   }
 }
 
