--- a/src/app/modules/party/page/add-politician/add-politician.component.html
+++ b/src/app/modules/party/page/add-politician/add-politician.component.html
@@ -1,11 +1,43 @@
 <section class="container">
   <div class="container__content">
-    <h1>Add pleb</h1>
+    <h1>{{'politician-new' | translate}}</h1>
     <form class="form-content">
-      <mat-form-field class="span-12" appearance="outline">
-        <mat-label>Outline form field</mat-label>
+      <mat-form-field class="span-6" appearance="outline">
+        <mat-label>{{'politician-name' | translate}}</mat-label>
         <input matInput placeholder="Placeholder">
       </mat-form-field>
+      <mat-form-field class="span-6" appearance="outline">
+        <mat-label>{{'birthday' | translate}}</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker touchUi startView="multi-year"></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field class="span-12" appearance="outline">
+        <mat-label>{{'politician-profileImageUrl' | translate}}</mat-label>
+        <input matInput placeholder="Placeholder">
+      </mat-form-field>
+      <mat-form-field class="span-12" appearance="outline">
+        <mat-label>{{'politician-twitterUrl' | translate}}</mat-label>
+        <input matInput placeholder="Placeholder">
+      </mat-form-field>
+      <mat-form-field class="span-12" appearance="outline">
+        <mat-label>{{'politician-instagramUrl' | translate}}</mat-label>
+        <input matInput placeholder="Placeholder">
+      </mat-form-field>
+      <mat-form-field class="span-12" appearance="outline">
+        <mat-label>{{'politician-facebookUrl' | translate}}</mat-label>
+        <input matInput placeholder="Placeholder">
+      </mat-form-field>
+      <div class="form-footer span-12">
+        <button mat-raised-button class="button-add">
+          {{'back' | translate}}
+        </button>
+        <button mat-raised-button color="primary" class="button-add">
+          {{'create' | translate}}
+        </button>
+
+      </div>
     </form>
   </div>
 </section>
