--- a/src/app/modules/party/page/form/politician-form/politician-form.component.html
+++ b/src/app/modules/party/page/form/politician-form/politician-form.component.html
@@ -1,7 +1,7 @@
 <form class="form-content" [formGroup]="politicianForm" (ngSubmit)="submit()">
   <mat-form-field class="span-6" appearance="outline">
     <mat-label>{{'politician-name' | translate}}</mat-label>
-    <input matInput formControlName="name">
+    <input matInput formControlName="fullName">
     <mat-error>{{'form-required' | translate}}</mat-error>
   </mat-form-field>
   <mat-form-field class="span-6" appearance="outline">
